--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <hr />
    </header>
    
-    <div id="SectionA"><p>"Welcome to New Zealand's leading computer science department. We pride ourselves on the excellence of our staff and our students."</p></div>
+    <div id="SectionA"><p>"Welcome to New Zealand's leading computer science department. We pride ourselves on the excellence of our staff and our cats."</p></div>
     <div id="SectionB"><h2>Courses</h2><table id="cTab"></table></div>
     <div id="SectionC"><h2>People</h2><table id="pTab"></table></div>
     <div id="SectionD"><h2>News</h2><div id="newsdiv"></div></div>
